[package]
name = "qxvanity"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
x25519-dalek = { version = "2", default-features = false, features = [
    "static_secrets",
    "getrandom",
    "precomputed-tables",
] }
base64 = "0.22"
regex = { version = "1", default-features = false, features = [
    "std",
    "perf",
    "unicode-case",
] }
ssh-key = { version = "0.6", default-features = false, features = [
    "alloc",
    "rand_core",
    "ed25519",
] }
rand_core = { version = "0.6", features = ["getrandom"] }
thousands = "0.2"
humantime = "2"
log = "0.4"
env_logger = "0.11"
ssh-encoding = { version = "0.2", default-features = false, features = [
    "base64",
] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "wireguard"
harness = false

[[bench]]
name = "ssh_ed25519"
harness = false

[profile.release]
lto = true
codegen-units = 1
